--- a/src/Blazor.Gitter.AndroidApp/Blazor.Gitter.AndroidApp.csproj
+++ b/src/Blazor.Gitter.AndroidApp/Blazor.Gitter.AndroidApp.csproj
@@ -17,7 +17,6 @@
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
@@ -66,7 +65,6 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="XamarinLocalStorageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\wwwroot.zip" />
@@ -132,6 +130,10 @@
     <ProjectReference Include="..\Blazor.Gitter.Library\Blazor.Gitter.Library.csproj">
       <Project>{F40F2548-F756-4F17-ACB7-D5AC10D7DF56}</Project>
       <Name>Blazor.Gitter.Library</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Blazor.Gitter.XamarinShared\Blazor.Gitter.XamarinShared.csproj">
+      <Project>{9AE8BFE1-3A23-4880-B13D-748374B1BAEB}</Project>
+      <Name>Blazor.Gitter.XamarinShared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
